--- a/html/style.css
+++ b/html/style.css
@@ -1,12 +1,13 @@
 body{
 	background-color: #66b3ff;
+	display:block;
 }
 
-div#submission{
+div.wrapper{
 	border-radius: 5px;
     background-color: #f2f2f2;
     padding: 3%;
-	margin: auto;
+	margin: 0 auto;
     width: 50%;
 }
 
@@ -18,9 +19,12 @@ input[type=text],input[type=date], select {
 	border: 1px solid #ccc;
     border-radius: 4px;
 }
+input#fullname, input#dateofbirth{
+	text-align:right;
+}
 
 input[type=date],select{
-	margin-left :1.5%;
+	margin-left :0%; 
 }
 
 label{
@@ -33,7 +37,7 @@ input[type=submit]{
     color: white;
     padding: 1% 2%;
     margin: 2% 0%;
-	margin-left: 73%;
+	margin-left: 71%;
     border: none;
     border-radius: 4px;
 }
