--- a/html/style.css
+++ b/html/style.css
@@ -21,6 +21,7 @@ input[type=text],input[type=date], select {
 }
 input#fullname, input#dateofbirth{
 	text-align:right;
+	float:left;
 }
 
 input[type=date],select{
@@ -31,13 +32,23 @@ label{
 	padding:0.01em 16px
 }
 
-input[type=submit]{
+input[type=submit], a.button_a{
 	width: 20%;
     background-color: #4CAF50;
     color: white;
-    padding: 1% 2%;
-    margin: 2% 0%;
-	margin-left: 71%;
+    padding: 5px 5px;
+    margin: 2px;
     border: none;
     border-radius: 4px;
+	display: inline-block;
+}
+
+a.button_a{
+	text-align: center;
+	float: right;
+	text-decoration: none;
+}
+
+input[type=submit]{
+	float :right
 }
