--- a/html/style.css
+++ b/html/style.css
@@ -32,7 +32,7 @@ label{
 	padding:0.01em 16px
 }
 
-input[type=submit], a.button_a{
+input[type=submit], a.button_a, a.button_a_overlap{
 	width: 20%;
     background-color: #4CAF50;
     color: white;
@@ -47,6 +47,14 @@ a.button_a{
 	text-align: center;
 	float: right;
 	text-decoration: none;
+}
+
+a.button_a_overlap{
+	text-align: center;
+	text-decoration: none;
+	float: right;
+	clear:right;
+	display: inline-block;
 }
 
 input[type=submit]{
